tests/type-errors/no_method_in_select.arl
archetype no_method_in_select

asset my_asset identified by id {
  id : string;
  value : int;
}

variable res : int = 0

action exec (str : string) {
  effect {
    var l = my_asset.select(the.value = my_asset.get("1").id);
  }
}
